---
config:
    layout: elk
---
erDiagram

   Match {
        string id PK
        int queue_id FK
        int created
        int ended
        string patch
    } 

    Match_Participant{
        string summoner_id PK,FK
        string match_id PK, FK
        string champion_id FK
        int kills
        int deaths
        int assists
        int gold
        int team
        bool won
        string position 
        int item0 FK
        int item1 FK
        int item2 FK
        int item3 FK
        int item4 FK
        int item5 FK
        int item6 FK
        int role_bound_item FK
    }

    Champion{
        string id PK
        string name 
        int champion_key
    }

    Champion_Stats{
        string champion_id PK, FK
        int queue_id PK, FK
        string patch PK
        int games_played 
        int games_won 
        int games_banned
        int kills
        int deaths
        int assists
    }

    Champion_Match_Ban{
        string match_id PK, FK
        int champion_key PK, FK
    }

    Summoner{
        string id PK
        string name
        int games_played
        int games_won
        int kills
        int deaths
        int assists
    }

    Summoner_Queue{
        string summoner_id PK, FK
        int queue_id PK, FK
        string tier
        string rank
        int league_points
        int wins
        int losses
    }

    Summoner_Champion{
        string summoner_id PK, FK
        string champion_id PK, FK
        int queue_id PK, FK
        int    games_played 
        int    games_won
        int kills
        int deaths
        int assists
    }

    Matches_Analyzed{
        string patch PK
        int queue_id PK, FK
        int count
    }

    Queue {
        int id PK
        string map
        text description
        text notes
    }

    Ban {
        string match_id PK, FK
        int team PK
        int ban_order PK
        int champion_key
    }

    Item {
        int item_id PK
        string name
        string description
    }

    Champion ||--o{ Summoner_Champion : ""
    Summoner ||--o{ Summoner_Champion : ""
    Summoner ||--o{ Match_Participant : ""
    Match ||--o{ Match_Participant : ""
    Champion ||--o{ Match_Participant : ""
    Champion ||--o{ Champion_Stats : ""
    Queue ||--o{ Match : ""
    Queue ||--o{ Champion_Stats : ""
    Queue ||--o{ Matches_Analyzed : ""
    Match ||--o{ Ban : ""
    Match ||--o{ Champion_Match_Ban : ""
    Champion ||--o{ Champion_Match_Ban : ""
    Item ||--o{ Match_Participant : "8 total relations for item0 to item6 and role_bound_item (7 omitted for clarity)"
    Summoner ||--o{ Summoner_Queue : ""
    Queue ||--o{ Summoner_Queue : ""
